--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -123,6 +123,13 @@ a {
 
 /***** finder *****/
 .sp-finder {
+  .sp-finder-hd {
+    padding: 0px;
+    margin-bottom: 8px;
+  }
+  .sp-finder-actions-item {
+    margin-bottom: 8px;
+  }
   .sp-finder-search {
     background-color: #f6f7f9;
     padding: 16px 0 0 0;
