--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -119,6 +119,9 @@ a {
   padding: 10px;
   border-top: 1px solid #efefef;
   z-index: 2000;
+  .el-button {
+    margin: 0 20px;
+  }
 }
 
 /***** finder *****/
