--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -131,7 +131,7 @@ a {
     margin-bottom: 8px;
   }
   .sp-finder-actions-item {
-    margin-bottom: 8px;
+    // margin-bottom: 8px;
   }
   .sp-finder-search {
     background-color: #f6f7f9;
