--- a/src/style/element-ui.scss
+++ b/src/style/element-ui.scss
@@ -278,7 +278,7 @@ $color-secondary: rgba(var(--themeColorRgb), 0.6);
       }
     }
     &.is-checked + .el-radio__label {
-      color: $color-primary;
+      color: inherit;
     }
   }
   &__inner {
@@ -322,4 +322,10 @@ $color-secondary: rgba(var(--themeColorRgb), 0.6);
       }
     }
   }
+}
+
+.el-statistic .head {
+  margin-bottom: 4px;
+  color: rgba(0, 0, 0, 0.45);
+  font-size: 14px;
 }
