fix: 模板设计器优化

--- a/src/view/decorate/index.scss
+++ b/src/view/decorate/index.scss
@@ -83,14 +83,14 @@
       margin: 40px auto;
       box-shadow: 0 0 14px 0 rgb(0 0 0 / 10%);
     }
-    .weapp-header {
-      background-image: url('../../assets/imgs/weapp-header.png');
-      height: 64px;
-      width: 375px;
-      background-repeat: no-repeat;
-      background-size: cover;
-      background-position: 50%;
-    }
+    // .weapp-header {
+    //   background-image: url('../../assets/imgs/weapp-header.png');
+    //   height: 64px;
+    //   width: 375px;
+    //   background-repeat: no-repeat;
+    //   background-size: cover;
+    //   background-position: 50%;
+    // }
     .wgt-tip {
       position: absolute;
       right: 386px;
