--- a/src/view/decorate/wgts/wgt_slider/index.scss
+++ b/src/view/decorate/wgts/wgt_slider/index.scss
@@ -33,6 +33,9 @@
     &.rounded {
       border-radius: 8px;
     }
+    &.padded {
+      padding: 0 10px;
+    }
   }
   .placeholder-item {
     visibility: hidden;
@@ -53,12 +56,17 @@
     height: 100%;
   }
   .slider-pagination {
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    left: 0;
+    // position: absolute;
+    // bottom: 0;
+    // right: 10px;
+    // left: 10px;
     z-index: 1000;
     display: flex;
+    margin: 10px 10px 0;
+    &.cover-padded {
+      margin-top: 0;
+    }
+
     &.left {
       justify-content: flex-start;
     }
@@ -68,7 +76,60 @@
     &.right {
       justify-content: flex-end;
     }
-    .dot-item {
+    &.dark {
+      .dot-item {
+        background: rgba(0, 0, 0, 0.4);
+      }
+      .pagination-count {
+        background: rgba(0, 0, 0, 0.4);
+        color: #fff;
+      }
+    }
+    &.light {
+      .dot-item {
+        background: rgba(255, 255, 255, 0.7);
+      }
+      .pagination-count {
+        background: rgba(255, 255, 255, 0.7);
+        color: #555;
+      }
+    }
+    &.rectangle {
+      .dot-item {
+        width: 16px;
+        height: 4px;
+        margin: 0 4px;
+        border-radius: 2px;
+        &.active {
+          background: #d42f29;
+        }
+      }
+      .pagination-count {
+        font-size: 12px;
+        line-height: 14px;
+        padding: 0 2px;
+        border-radius: 2px;
+      }
+    }
+    &.circle {
+      .dot-item {
+        width: 8px;
+        height: 8px;
+        border-radius: 4px;
+        margin: 0 6px;
+        &.active {
+          background: #d42f29;
+        }
+      }
+      .pagination-count {
+        width: 24px;
+        height: 24px;
+        font-size: 12px;
+        border-radius: 12px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
     }
   }
 }
