--- a/src/view/decorate/wgts/wgt_showcase/index.scss
+++ b/src/view/decorate/wgts/wgt_showcase/index.scss
@@ -16,16 +16,15 @@
   }
   .wgt-bd {
     position: relative;
-    &.spaced {
-      padding: 0 10px;
-      .slider-container {
-        right: 10px;
-        left: 10px;
-      }
-      .slider-pagination {
-        right: 10px;
-        left: 10px;
-      }
+    padding: 0 10px;
+    display: flex;
+    .lf {
+      width: calc(50% - 5px);
+      margin-right: 5px;
+    }
+    .rg {
+      width: calc(50% - 5px);
+      margin-left: 5px;
     }
   }
 }
