--- a/src/view/decorate/index.scss
+++ b/src/view/decorate/index.scss
@@ -72,6 +72,9 @@
       &.wgt-goods-grid-tab {
         background-image: url('../../assets/imgs/decorate/wgt-goods-grid-tab.png');
       }
+      &.wgt-store {
+        background-image: url('../../assets/imgs/decorate/wgt-store.png');
+      }
     }
     .wgt-name {
       color: #666;
