--- a/src/view/decorate/index.scss
+++ b/src/view/decorate/index.scss
@@ -81,6 +81,9 @@
       &.wgt-marquees {
         background-image: url('../../assets/imgs/decorate/wgt-marquees.png');
       }
+      &.wgt-nearby-shop {
+        background-image: url('../../assets/imgs/decorate/wgt-nearby-shop.png');
+      }
     }
     .wgt-name {
       color: #666;
