--- a/src/view/decorate/wgts/wgt_nearbyShop/index.scss
+++ b/src/view/decorate/wgts/wgt_nearbyShop/index.scss
@@ -105,6 +105,7 @@
           font-size: 15px;
           display: flex;
           justify-content: space-between;
+          width: 260px;
           span:nth-child(2){
             display: block;
             font-size: 12px;
