--- a/src/styles/element-ui.scss
+++ b/src/styles/element-ui.scss
@@ -5,8 +5,9 @@ $--button-padding-vertical: 8px;
 $--button-padding-horizontal: 10px;
 
 $--border-radius-base: 6px;
+// $--border-radius-small: 8px;
 
-$--input-height: 32px;
+// $--input-height: 32px;
 
 $--font-path: '~element-ui/lib/theme-chalk/fonts';
 
