--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -14,6 +14,20 @@
   }
 }
 
+/* nprogress */
+#nprogress {
+  .bar {
+    background: var(--primary) !important;
+  }
+  .peg {
+    box-shadow: 0 0 10px var(--primary), 0 0 5px var(--primary) !important;
+  }
+  .spinner-icon {
+    border-top-color: var(--primary) !important;
+    border-left-color: var(--primary) !important;
+  }
+}
+
 /* sp-finder */
 .sp-finder {
   .pop-edit-box-icon {
