--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -19,13 +19,25 @@
   .bar {
     background: var(--primary) !important;
   }
+
   .peg {
     box-shadow: 0 0 10px var(--primary), 0 0 5px var(--primary) !important;
   }
+
   .spinner-icon {
     border-top-color: var(--primary) !important;
     border-left-color: var(--primary) !important;
   }
+}
+
+/* tip-info */
+.tip-info {
+  background-color: #fff6f7;
+  border-radius: 4px;
+  border-left: 4px solid #f12805;
+  padding: 6px 10px;
+  margin-bottom: 10px;
+  font-size: 13px;
 }
 
 /* sp-finder */
@@ -57,26 +69,52 @@
   }
 
   .sp-finder-search {
-    background-color: #f6f7f9;
     padding: 16px 0 0 0;
     border: none;
+    position: relative;
 
     .sp-finder-search-fields {
+      background-color: #f6f7f9;
+      display: flex;
+      flex-wrap: wrap;
       margin-left: 0;
+      margin-bottom: 16px;
+      padding-top: 16px;
 
       .search-field {
-        width: auto !important;
+        display: flex;
+        align-items: center;
         padding: 0 8px 16px 0;
         flex-grow: 0 !important;
+
+        .search-field-label {
+          text-align: right;
+        }
       }
     }
 
     .search-field-label {
       width: 90px;
+      margin-right: 8px;
     }
 
     .search-field-value {
       width: 214px;
+    }
+
+    .sp-finder-search-actions {
+      margin-bottom: 16px;
+    }
+
+    .search-more {
+      position: absolute;
+      right: 10px;
+      top: 22px;
+
+      span {
+        display: flex;
+        align-items: center;
+      }
     }
   }
 
