--- a/src/styles/element-ui.scss
+++ b/src/styles/element-ui.scss
@@ -5,7 +5,6 @@ $--button-padding-vertical: 8px;
 $--button-padding-horizontal: 10px;
 
 $--border-radius-base: 6px;
-// $--border-radius-small: 8px;
 
 // $--input-height: 32px;
 
@@ -159,6 +158,11 @@ $--font-path: '~element-ui/lib/theme-chalk/fonts';
   width: auto;
   position: absolute;
   transform: translate(-50%, -50%);
+}
+
+.el-dialog {
+  margin-top: 10vh !important;
+  border-radius: 8px;
 }
 
 // .el-range-editor {
