--- a/src/styles/element-ui.scss
+++ b/src/styles/element-ui.scss
@@ -163,6 +163,11 @@ $--font-path: '~element-ui/lib/theme-chalk/fonts';
 .el-dialog {
   margin-top: 10vh !important;
   border-radius: 8px;
+
+  &.is-fullscreen {
+    margin-top: 0 !important;
+    border-radius: 0;
+  }
 }
 
 // .el-range-editor {
