--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -37,3 +37,39 @@ body {
   height: 100%;
   width: 100%;
 }
+
+// 英文语言下所有元素的 line-height 设置为 1（排除 el-tabs__item,el-pager>.number,el-menu-item）
+.lang-en{
+  &*:not(.el-tabs__item,.el-pager>.number,.el-menu-item,.el-submenu__title,.el-tag,.el-select-dropdown__item,.el-range-separator,.btn-linkpath,.el-input__inner,.el-input,.el-input-number * ,.el-input-number) {
+    line-height: 1.2;
+  }
+   .el-table__cell .cell,.lang-en .el-dialog__body{
+    word-break: normal !important;
+  } 
+  .cell{
+    line-height: 1.2;
+  }
+  
+ .sub-menu-list .el-menu-item,.sub-menu-list .el-submenu__title{
+    word-break: normal;
+    height: auto;
+    white-space: normal;
+    padding: 5px 0;
+    line-height: 1.2;
+   
+  }
+  .sub-menu-list .el-menu-item{
+    font-size: 12px;
+    margin-bottom: 5px;
+  }
+  
+   .attr-panel-cell {
+    display: block !important;
+    padding-bottom: 10px;
+  }
+ .cell-label{
+    line-height: 1.2 !important;
+    padding-bottom: 5px;
+    width: auto !important;
+  }
+}
