--- a/src/view/decorate/index.scss
+++ b/src/view/decorate/index.scss
@@ -58,7 +58,7 @@
       height: 100px;
       text-align: center;
       display: flex;
-      justify-content: center;
+      // justify-content: center;
       align-items: center;
       flex-direction: column;
 
